Store product cache rows as typed rows